{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 42,
  "lineage": "368c025a-a74f-9482-a9a7-3b8e888fd7e2",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad53ba8e49f41b76",
            "arn": "arn:aws:ec2:eu-west-3:817437954266:instance/i-0e0f0834259eeb429",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e0f0834259eeb429",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b59261da819619f3",
            "private_dns": "ip-10-0-135-95.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.135.95",
            "public_dns": "ec2-15-237-101-214.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.101.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0df851c9708abb24b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b31ebf77ee525715",
            "tags": {
              "Name": "dev-bastion-host"
            },
            "tags_all": {
              "Name": "dev-bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09ad8854547adb911"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_key_pair.deployer",
            "module.compute.aws_security_group.bastion",
            "module.compute.data.aws_ami.ubuntu",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:817437954266:security-group/sg-09ad8854547adb911",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ad8854547adb911",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-bastion-20260329150945370400000004",
            "name_prefix": "dev-bastion-",
            "owner_id": "817437954266",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-bastion-sg"
            },
            "tags_all": {
              "Name": "dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-085fe236eec2c02e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:817437954266:security-group/sg-0f874223f9ad110df",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f874223f9ad110df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ad8854547adb911"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02267b44620a89ce6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-web-20260329150948452800000006",
            "name_prefix": "dev-web-",
            "owner_id": "817437954266",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-web-sg"
            },
            "tags_all": {
              "Name": "dev-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-085fe236eec2c02e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_security_group.bastion",
            "module.loadbalancer.aws_security_group.alb",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:817437954266:security-group/sg-0f4ab8d75d0afe189",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4ab8d75d0afe189",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f874223f9ad110df"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev-rds-20260329150951160200000007",
            "name_prefix": "dev-rds-",
            "owner_id": "817437954266",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-rds-sg"
            },
            "tags_all": {
              "Name": "dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-085fe236eec2c02e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_security_group.bastion",
            "module.compute.aws_security_group.web",
            "module.loadbalancer.aws_security_group.alb",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:817437954266:loadbalancer/app/dev-wordpress-alb/d6f58c224f3cd8ee",
            "arn_suffix": "app/dev-wordpress-alb/d6f58c224f3cd8ee",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-wordpress-alb-1420623777.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:817437954266:loadbalancer/app/dev-wordpress-alb/d6f58c224f3cd8ee",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-wordpress-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02267b44620a89ce6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-017ac75d3a87a4eed"
              },
              {
                "subnet_id": "subnet-0b31ebf77ee525715"
              }
            ],
            "subnets": [
              "subnet-017ac75d3a87a4eed",
              "subnet-0b31ebf77ee525715"
            ],
            "tags": {
              "Name": "dev-wordpress-alb"
            },
            "tags_all": {
              "Name": "dev-wordpress-alb"
            },
            "vpc_id": "vpc-085fe236eec2c02e9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.loadbalancer.aws_security_group.alb",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:817437954266:listener/app/dev-wordpress-alb/d6f58c224f3cd8ee/e21561de9258c48b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:817437954266:targetgroup/dev-wordpress-tg/c156d3eb5ba5b752",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:817437954266:listener/app/dev-wordpress-alb/d6f58c224f3cd8ee/e21561de9258c48b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:817437954266:loadbalancer/app/dev-wordpress-alb/d6f58c224f3cd8ee",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.loadbalancer.aws_lb.main",
            "module.loadbalancer.aws_lb_target_group.wordpress",
            "module.loadbalancer.aws_security_group.alb",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:817437954266:targetgroup/dev-wordpress-tg/c156d3eb5ba5b752",
            "arn_suffix": "targetgroup/dev-wordpress-tg/c156d3eb5ba5b752",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:817437954266:targetgroup/dev-wordpress-tg/c156d3eb5ba5b752",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:817437954266:loadbalancer/app/dev-wordpress-alb/d6f58c224f3cd8ee"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-wordpress-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev-wordpress-tg"
            },
            "tags_all": {
              "Name": "dev-wordpress-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-085fe236eec2c02e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:817437954266:security-group/sg-02267b44620a89ce6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02267b44620a89ce6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-alb-20260329150945830000000005",
            "name_prefix": "dev-alb-",
            "owner_id": "817437954266",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-alb-sg"
            },
            "tags_all": {
              "Name": "dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-085fe236eec2c02e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014ce06933c2f6f42",
            "arn": "arn:aws:ec2:eu-west-3:817437954266:elastic-ip/eipalloc-014ce06933c2f6f42",
            "association_id": "eipassoc-0551b0b42df7b2ff1",
            "domain": "vpc",
            "id": "eipalloc-014ce06933c2f6f42",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-06f0523c10ab5de66",
            "private_dns": "ip-10-0-128-232.eu-west-3.compute.internal",
            "private_ip": "10.0.128.232",
            "public_dns": "ec2-13-39-248-157.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.248.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-eip-nat-a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-eip-nat-a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0411dab9cf60cfbf0",
            "arn": "arn:aws:ec2:eu-west-3:817437954266:elastic-ip/eipalloc-0411dab9cf60cfbf0",
            "association_id": "eipassoc-04725737760a095de",
            "domain": "vpc",
            "id": "eipalloc-0411dab9cf60cfbf0",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-087310fcdc0ff0bea",
            "private_dns": "ip-10-0-159-67.eu-west-3.compute.internal",
            "private_ip": "10.0.159.67",
            "public_dns": "ec2-15-224-55-251.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.224.55.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-eip-nat-b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-eip-nat-b"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:817437954266:internet-gateway/igw-07cbac66e208c7d39",
            "id": "igw-07cbac66e208c7d39",
            "owner_id": "817437954266",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-085fe236eec2c02e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014ce06933c2f6f42",
            "association_id": "eipassoc-0551b0b42df7b2ff1",
            "connectivity_type": "public",
            "id": "nat-0b70f22b67665d708",
            "network_interface_id": "eni-06f0523c10ab5de66",
            "private_ip": "10.0.128.232",
            "public_ip": "13.39.248.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b31ebf77ee525715",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_a",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0411dab9cf60cfbf0",
            "association_id": "eipassoc-04725737760a095de",
            "connectivity_type": "public",
            "id": "nat-034c82c598fb9bd4d",
            "network_interface_id": "eni-087310fcdc0ff0bea",
            "private_ip": "10.0.159.67",
            "public_ip": "15.224.55.251",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-017ac75d3a87a4eed",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_b",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07cbac66e208c7d39",
            "id": "r-rtb-08830067708d8acc81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08830067708d8acc8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cd9d69ffb990838a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b70f22b67665d708",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cd9d69ffb990838a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_a",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.nat_public_a",
            "module.networking.aws_route_table.nat_public_a",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-038a3dbf1493c54901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-034c82c598fb9bd4d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-038a3dbf1493c5490",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_b",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.nat_public_b",
            "module.networking.aws_route_table.nat_public_b",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:817437954266:route-table/rtb-0cd9d69ffb990838a",
            "id": "rtb-0cd9d69ffb990838a",
            "owner_id": "817437954266",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b70f22b67665d708",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-rt-a",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-rt-a",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-085fe236eec2c02e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:817437954266:route-table/rtb-038a3dbf1493c5490",
            "id": "rtb-038a3dbf1493c5490",
            "owner_id": "817437954266",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034c82c598fb9bd4d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-rt-b",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-rt-b",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-085fe236eec2c02e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:817437954266:route-table/rtb-08830067708d8acc8",
            "id": "rtb-08830067708d8acc8",
            "owner_id": "817437954266",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07cbac66e208c7d39",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-rt",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-rt",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-085fe236eec2c02e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_nat_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0687dd5a4b1de67a8",
            "route_table_id": "rtb-0cd9d69ffb990838a",
            "subnet_id": "subnet-047baa3bc4e58a25a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.nat_public_a",
            "module.networking.aws_subnet.privat_subnet_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_nat_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdcb6d8d9cbae338",
            "route_table_id": "rtb-038a3dbf1493c5490",
            "subnet_id": "subnet-070fe3256e55e5e94"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.nat_public_b",
            "module.networking.aws_subnet.privat_subnet_b",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0555726f5550e1565",
            "route_table_id": "rtb-08830067708d8acc8",
            "subnet_id": "subnet-0b31ebf77ee525715"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_pubb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d546fdf16578e4cb",
            "route_table_id": "rtb-08830067708d8acc8",
            "subnet_id": "subnet-017ac75d3a87a4eed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privat_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:817437954266:subnet/subnet-047baa3bc4e58a25a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047baa3bc4e58a25a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817437954266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private_subnet_a_dev",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private_subnet_a_dev",
              "Type": "Private"
            },
            "vpc_id": "vpc-085fe236eec2c02e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privat_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:817437954266:subnet/subnet-070fe3256e55e5e94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070fe3256e55e5e94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817437954266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private_subnet_b_dev",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private_subnet_b_dev",
              "Type": "Private"
            },
            "vpc_id": "vpc-085fe236eec2c02e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:817437954266:subnet/subnet-0b31ebf77ee525715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b31ebf77ee525715",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "817437954266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public_subnet_a_dev",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public_subnet_a_dev",
              "Type": "Public"
            },
            "vpc_id": "vpc-085fe236eec2c02e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:817437954266:subnet/subnet-017ac75d3a87a4eed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017ac75d3a87a4eed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "817437954266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public_subnet_b_dev",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public_subnet_b_dev",
              "Type": "Public"
            },
            "vpc_id": "vpc-085fe236eec2c02e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:817437954266:vpc/vpc-085fe236eec2c02e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0839693fa7dc2f583",
            "default_route_table_id": "rtb-0d86b7fb646f54fb3",
            "default_security_group_id": "sg-03b98e5204b6f2021",
            "dhcp_options_id": "dopt-0550468d8bcb6d894",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085fe236eec2c02e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d86b7fb646f54fb3",
            "owner_id": "817437954266",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}